reviews/reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9082
    name: http
    targetPort: 9082
  selector:
    app: reviews
  type: ClusterIP
---
# Reviews v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  namespace: bookinfo
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: villanel/bookinfo-reviews:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9082
---
# Reviews v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  namespace: bookinfo
  labels:
    app: reviews
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: bookinfo/reviews:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9082
---
# Reviews v3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  namespace: bookinfo
  labels:
    app: reviews
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: bookinfo/reviews:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9082
---
# Reviews version services
apiVersion: v1
kind: Service
metadata:
  name: reviews-v1
  namespace: bookinfo
spec:
  ports:
  - port: 9082
    name: http
  selector:
    app: reviews
    version: v1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-v2
  namespace: bookinfo
spec:
  ports:
  - port: 9082
    name: http
  selector:
    app: reviews
    version: v2
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-v3
  namespace: bookinfo
spec:
  ports:
  - port: 9082
    name: http
  selector:
    app: reviews
    version: v3
  type: ClusterIP
