reviews/reviews-pr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-pr-route
  namespace: bookinfo
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: reviews
    port: 9082
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: "baggage"
        value: ".*pr_id=test_pr_id.*"
    backendRefs:
    - name: reviews-v3
      port: 9082
